--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-30  Andreas Schwab  <schwab@suse.de>
+
+	* config/ltmain.in: Accept --mode=relink.
+
 2004-08-29  Gary V. Vaughan  <gary@gnu.org>
 
 	* NEWS: Updated.
