--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-08-30  Andreas Schwab  <schwab@suse.de>
 
+	* libltdl/ltdl.c (lt_dlexit): Remove lvalue cast.
+
 	* libltdl/slist.h (SListCallback): Fix missing type.
 
 	* config/ltmain.in: Accept --mode=relink.
