--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-31  Gary V. Vaughan  <gary@gnu.org>
+
+	* Makefile.am (clean-ltmain-sh): Remove stale config/ltmain.sh
+	from the build tree that were left behind by previous versions of
+	libtool.
+	($top_srcdir)/stamp-vcl: Since this rule is already called on
+	every invocation of make, hook clean-ltmain-sh in here too.
+	Suggested by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
 2004-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* bootstrap: Update warning message to reflect having split
