--- a/HACKING
+++ b/HACKING
@@ -131,9 +131,9 @@ and is not part of a release distribution.
 * Update NEWS, ChangeLog.
 
 * Make sure the 'Be Bourne compatible' shell snippet near the top of
-  ./libtoolize.in, ./ltmain.in matches the latest autoconf wisdom by
-  updating to match CVS autoconf AS_SHELL_SANITIZE in autoconf's
-  lib/m4sugar/m4sh.m4.
+  ./libtoolize.in, config/ltmain.in and tests/defs matches the latest
+  autoconf wisdom by updating to match CVS autoconf AS_SHELL_SANITIZE in
+  autoconf's lib/m4sugar/m4sh.m4.
 
 * Run ./bootstrap.
 
