--- a/TODO
+++ b/TODO
@@ -7,6 +7,10 @@ GNU Libtool
 1.1. libtool
 ------------
 
+* Factor common shell preamble and function definitions into a separate
+  file and substitute the contents into all of our shell scripts at
+  bootstrap, to avoid any synchronisation issues.
+
 * We could have an option to hardcode paths into libraries, as well as
   binaries: `... -Wl,-soname -Wl,/tmp/libtest.so.0 ...'.  This is not
   possible on all platforms, and is in part obviated by the ability of
