--- a/THANKS
+++ b/THANKS
@@ -43,6 +43,7 @@ Peter Eisentraut                peter_e@gmx.net
 Benjamin Reed                   ranger@befunk.com
 Pavel Roskin                    pavel_roskin@geocities.com
 Rainer Orth                     ro@TechFak.Uni-Bielefeld.DE
+Ralf Wildenhues			Ralf.Wildenhues@gmx.de
 Ralph Schleicher                rs@nunatak.allgaeu.org
 Robert Collins                  robert.collins@itdomain.com.au
 Sebastian Wilhelmi              wilhelmi@ira.uka.de
