* AUTHORS: Fix my email address.

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ Foundation.
 Gordon Matzigkeit.  Designed and implemented libtool.
 Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
 Thomas Tanner <tanner@ffii.org>.  Co-maintainer.
-Gary V. Vaughan <gvv@techie.com>.  Co-maintainer.
+Gary V. Vaughan <gvv@gnu.org>.  Co-maintainer.
 Ossama Othman <ossama@debian.org>.  Co-maintainer.
 Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
 Bob Friesenhahn <bfriesen@simple.dallas.tx.us>.  Co-maintainer.
