--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-02  Gary V. Vaughan  <gary@gnu.org>,
+
+	* AUTHORS: Fix my email address.
+
 2004-09-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/ltdl.c (try_dlopen): Fix memory leak.
