--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-03  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* m4/libtool.m4 (_LT_ENABLE_LOCK): Reformatted.
+
 2004-09-03  Gary V. Vaughan  <gary@gnu.org>
 
 	* HACKING: Explain how to verify detached signatures with gpg in
