--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/slist.c (slist_cons): Don't leak the tail of a list.
+
 2004-09-03  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4 (_LT_ENABLE_LOCK): Reformatted.
