From Martin Quinson <mquinson@ens-lyon.fr> * m4/libtool.m4 (_LT_SETUP, _LT_ENABLE_LOCK, LT_PATH_LD): Use AS_HELP_STRING to get rid of autoconf -Wobsolete warning messages. * m4/ltdl.m4 (LT_WITH_LTDL, _LT_ENABLE_INSTALL): Ditto. * m4/ltoptions.m4 (_LT_ENABLE_SHARED, _LT_ENABLE_STATIC) (_LT_ENABLE_FAST_INSTALL, _LT_WITH_PIC): Ditto. * TODO: Updated

--- a/TODO
+++ b/TODO
@@ -11,6 +11,11 @@ GNU Libtool
   file and substitute the contents into all of our shell scripts at
   bootstrap, to avoid any synchronisation issues.
 
+* Eliminate the warnings from autoconf -Wobsolete.
+
+* Hook the various language dependencies into the autoconf _AC_LANG
+  framework.
+
 * We could have an option to hardcode paths into libraries, as well as
   binaries: `... -Wl,-soname -Wl,/tmp/libtest.so.0 ...'.  This is not
   possible on all platforms, and is in part obviated by the ability of
