--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-09-03  Gary V. Vaughan  <gary@gnu.org>
+
+	From Martin Quinson <mquinson@ens-lyon.fr>
+	* m4/libtool.m4 (_LT_SETUP, _LT_ENABLE_LOCK, LT_PATH_LD): Use
+	AS_HELP_STRING to get rid of autoconf -Wobsolete warning
+	messages.
+	* m4/ltdl.m4 (LT_WITH_LTDL, _LT_ENABLE_INSTALL): Ditto.
+	* m4/ltoptions.m4 (_LT_ENABLE_SHARED, _LT_ENABLE_STATIC)
+	(_LT_ENABLE_FAST_INSTALL, _LT_WITH_PIC): Ditto.
+	* TODO: Updated
+
 2004-09-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/slist.c (slist_cons): Don't leak the tail of a list.
