--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ New in 1.9d: 2004-??-??; CVS version 1.9c, Libtool team:
 * If non-pic objects were not compiled, and libtool is called in link mode,
   libtool no longer silently creates an empty archive, but rather falls
   back to pic objects.
+* When compiling C glue code with $LTCC, libtool now saves the setting of
+  $compiler_flags from the C tag, and passes those flags to $LTCC.
 * libtool uses automake's $(mkdir_p), and can support `make -j' on
   multi-processor hosts if automake discovered a multithreadable mkdir.  If
   it still doesn't work for you, install GNU mkdir (in GNU coreutils).
