--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-05  Gary V. Vaughan  <gary@gnu.org>
+
+	* Makefile.am (libtool): Force libtool to be regenerated if
+	stamp-vcl has changed.
+
 2004-09-05  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4, config/ltmain.in: When calling $LTCC,
