--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Brad <brad@comstyle.com>
+
+	* libtool.m4: Fixes for the OpenBSD support
+
 2004-08-12  Maciej W. Rozycki  <macro@linux-mips.org>
 
 	* demo/Makefile.am: Stop automake warning by defining
