--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-13  Gary V. Vaughan  <gary@gnu.org>
+
+	* m4/libtool.m4 (_LT_CMD_GLOBALS_SYMBOLS): Fix a typo I made when
+	applying 2004-09-11 Ralf Wildenhues.
+
 2004-09-12  Brad <brad@comstyle.com>
 
 	* libtool.m4: Fixes for the OpenBSD support
