--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-14  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Simplification:
+	distinguish between data and code symbols on every system.
+
 2004-09-14  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	Unfortunately, libtool has no way of telling if unrecognized
