--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-15  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_ENABLE_LOCK):Replace AC_TRY_LINK with
+	AC_LINK_IFELSE to get rid of `autoconf -Wobsolete' warning.
+	* m4/ltdl.m4 (LT_LIB_DLLOAD): Ditto.
+
 2004-09-15  Gary V. Vaughan  <gary@gnu.org>
 
 	* config/ltmain.in (func_quote_for_eval): Set a return value to
