--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-09-17  Peter O'Gorman  <peter@pogma.com>
 
+	* m4/libtool.m4: remove an extra "]"
+
 	* m4/libtool.m4 [darwin] (_LT_LANG_CXX_CONFIG): Changes for 10.4.
 	* config/libtool.in [darwin]: ditto.
 
